# DesktopAgent

./: .env.example  .gitignore  README.md  pyproject.toml  技术路线与实现方案.md  项目分析报告.md  项目场景（1-3）.txt  项目完成情况.md  项目简介.docx  项目结构与设计文档.md
config/: default.yaml
scripts/: debug_agnes_mcp.py
src/: main.py
src/agent/: executor.py  loop.py  memory.py  observer.py  planner.py  run_lock.py  state.py  step_guard.py  verifier.py
src/perception/: screenshot.py  uia_parser.py
src/schemas/: __init__.py  element.py  task.py
src/tools/: base.py  registry_init.py
src/tools/ai/: image_gen.py  text_gen.py  vision.py
src/tools/browser/: navigate.py
src/tools/desktop/: app_control.py  text_input.py  (+3 more)
src/ui/: ctk_app.py  events.py  gradio_app.py
src/utils/: app_discovery.py  config.py  humanize.py  llm_factory.py  logger.py  retry.py  secret.py  user_settings.py  windows_dpi.py
src/vision_mcp/: __init__.py  agnes_backend.py  agnes_client.py  agnes_server.py  artifacts.py
tests/: test_agent_config.py  test_agnes_mcp_bridge.py  test_app_aliases_and_events.py  test_browser_lifecycle.py  test_browser_rich_text.py  test_desktop_text_input.py  test_goal_completion.py  test_kimi_k3_provider.py  test_loop_resilience.py  test_native_desktop_control.py  test_planner_json_response.py  test_replan_merge.py  test_screen_capture_metadata.py  test_user_confirmation_and_guard.py  test_verifier_native_input.py  test_vision_mcp_artifacts.py  test_vision_provider_settings.py  test_visual_element_location.py  test_wechat_login_status_tool.py  test_wps_com.py  test_zhihu_media_and_state.py
(+1 files in other folders)
